Class Don:
	def __init__(self,Id, Date, Montant, Fan, Omless):
		self.Id = Id
		self.Date = Date
		self.Montant = Montant
		self.Fan = Fan
		self.Omless = Omless
		self.Video = []
